[PRMP-1446] - Fix overflow issue on delete-complete confirmation page

--- a/app/src/styles/App.scss
+++ b/app/src/styles/App.scss
@@ -482,6 +482,8 @@ $hunit: '%';
                 color: #fff;
                 font-size: 1.5rem;
                 white-space: pre-wrap;
+                word-break: break-word;
+                overflow-wrap: break-word;
 
                 &_header {
                     font-weight: 700;
